proj1/tests/other-tests/minz-tests/correct/bools_test1.py
a = True
b = False
c = a and b
d = c or b
e = (not d) and a
print a
print b
print c
print d
print e
