proj1/tests/other-tests/minz-tests/error/bools_bad1.py
a = True
b = False
c = ((not a) or b and (not not not (a or b))) and True or (False or not a
